[project]
name = "cartographer"
version = "0.0.0"
description = "Map generation"
authors = [{ name = "Freddy Wordingham", email = "freddy@digilab.co.uk" }]
readme = "README.md"
requires-python = "^3.12"

dependencies = ["directory-tree (>=1.0.0,<2.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
